# practice-advent-of-code

./: .gitignore  LICENSE  README.md
2015/day01/python/: part1.py  part2.py  test_part1.py  test_part2.py
2015/day02/python/: part1.py  part2.py  test_part1.py  test_part2.py
2015/day03/python/: part1.py  part2.py  test_part1.py  test_part2.py
2015/day04/python/: part1.py  part2.py  test_part1.py  test_part2.py
2015/day05/python/: part1.py  part2.py  test_part1.py  test_part2.py
2015/day06/python/: part1.py  part2.py  test_part1.py  test_part2.py
2015/day07/python/: part1.py  part2.py  test_part1.py  test_part2.py
2015/day08/python/: part1.py  part2.py  test_part1.py  test_part2.py
2015/day09/data/: input.dot
2015/day09/python/: part1.py  part2.py  test_part1.py  test_part2.py
2015/day10/python/: part1.py  part2.py  test_part1.py  test_part2.py
2020/day01/go/: types.go  types_test.go
2020/day01/python/: Makefile  pyproject.toml
2020/day01/python/advent/: part1.py  part2.py
2020/day01/python/tests/: test_part1.py  test_part2.py
2021/: requirements.in  requirements.txt
2021/day00/python/: part2.py  test_part2.py
2021/day01/go/: Makefile
2021/day01/python/: Makefile  part1.py  part2.py  test_part1.py  test_part2.py
2021/day02/go/: Makefile
2021/day02/python/: part1.py  part2.py  test_part1.py  (+1 more)
2021/day20/: NOTES
2021/day21/: NOTES
2022/: .gitignore  requirements-dev.in  requirements-dev.txt  requirements.txt
templates/go/: Makefile
templates/python/: Makefile  test_part1.py  test_part2.py
templates/rust/: Makefile
(+178 files in other folders)
