[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Jonathan Kaczynski <jmkacz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pytest = "^6.2"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
